add load more button

--- a/index.html
+++ b/index.html
@@ -84,7 +84,8 @@
                         <li><a class="upload" href="#">Upload</a></li>
                     </ul>
                 </div>
-            </header>    
+            </header>  
+            <hr>  
         
             <section>
                 <div class="row-flex filters insideContainer">
@@ -157,7 +158,10 @@
                             Live streaming application for gamers.
                         </h3>      
                     </div>
-                </div>        
+                </div>  
+                <div class="more">
+                    Load more
+                </div>      
             </section>
         </div>
     </div>  
