--- a/second.html
+++ b/second.html
@@ -13,7 +13,7 @@
     <div class="row-flex mainContainer">
         <div class="blackBg colum-flex">
             <div class="top row-flex">
-                <a href="#"><img class="logo" src="/images/Logo.svg" alt="design.today"></a>
+                <a href="index.html"><img class="logo" src="/images/Logo.svg" alt="design.today"></a>
                 <a href="#"><img class="burger" src="/images/burger.svg" alt="burger-icon"></a>
             </div>
             <nav class="nav">
@@ -73,9 +73,9 @@
                 <div class="rightBox row-flex">
                     <ul class="row-flex">
                         <li class="gopro"><a href="#">GO PRO!</a></li>
-                        <li><a href="#"><img src="/images/message.svg" alt="messageIcon"></a></li>
+                        <li></li><a href="#"><img src="/images/message.svg" alt="messageIcon"></a></li>
                         <li><a href="#"><img src="/images/bell.svg" alt="bell"></a></li>
-                        <li><a href="second.html"><img src="/images/yellow.man.svg" alt="manInYellow"></a></li>
+                        <li class="forCricle"><a href="index.html"><img src="/images/man.svg" alt="manicon"></a></li>
                         <li><a class="upload" href="#">Upload</a></li>
                     </ul>
                 </div>
@@ -83,78 +83,82 @@
             <hr>  
         
             <section>
-                <div class="row-flex filters insideContainer">
-                    <ul class="row-flex leftFilter">
-                        <li><a class="all" href="#">All</a></li>
-                        <li><a href="#">Web design</a></li>
-                        <li><a href="#">3D</a></li>
-                        <li><a href="">App design</a></li>
-                        <li><a href="">Animation</a></li>
-                        <li><a href="">Illustration</a></li>
-                        <li><a href="">Typography</a></li>
+                <div class="colum-flex dashBoard insideContainer">
+                    <ul class="row-flex titles">
+                        <li>Date</li>
+                        <li>Order ID</li>
+                        <li>Name</li>
+                        <li>Price</li>
+                        <li>Quantity</li>
+                        <li>Total</li>
                     </ul>
-                    <div class="row-flex rightFilter">
-                        <a href="#"><img src="/images/filter.svg" alt="filter"></a>
+                    <div class="row-flex board">
+                        <span class="Date">2020-09-29 95:57</span>
+                        <span class="Order">200398</span>
+                        <span class="Name">iPhone X 64Gb Grey</span>
+                        <span class="Price">$ 999.00</span>
+                        <span class="Quantity">1</span>
+                        <span class="Total">$ 999.00</span>
+                    </div>
+                    <div class="row-flex board">
+                        <span class="Date">2020-09-29 95:57</span>
+                        <span class="Order">200398</span>
+                        <span class="Name">iPhone X 64Gb Grey</span>
+                        <span class="Price">$ 999.00</span>
+                        <span class="Quantity">1</span>
+                        <span class="Total">$ 999.00</span>
+                    </div>
+                    <div class="row-flex board">
+                        <span class="Date">2020-09-29 95:57</span>
+                        <span class="Order">200398</span>
+                        <span class="Name">iPhone X 64Gb Grey</span>
+                        <span class="Price">$ 999.00</span>
+                        <span class="Quantity">1</span>
+                        <span class="Total">$ 999.00</span>
+                    </div>
+                    <div class="row-flex board">
+                        <span class="Date">2020-09-29 95:57</span>
+                        <span class="Order">200398</span>
+                        <span class="Name">iPhone X 64Gb Grey</span>
+                        <span class="Price">$ 999.00</span>
+                        <span class="Quantity">1</span>
+                        <span class="Total">$ 999.00</span>
+                    </div>
+                    <div class="row-flex board">
+                        <span class="Date">2020-09-29 95:57</span>
+                        <span class="Order">200398</span>
+                        <span class="Name">iPhone X 64Gb Grey</span>
+                        <span class="Price">$ 999.00</span>
+                        <span class="Quantity">1</span>
+                        <span class="Total">$ 999.00</span>
+                    </div>
+                    <div class="row-flex board">
+                        <span class="Date">2020-09-29 95:57</span>
+                        <span class="Order">200398</span>
+                        <span class="Name">iPhone X 64Gb Grey</span>
+                        <span class="Price">$ 999.00</span>
+                        <span class="Quantity">1</span>
+                        <span class="Total">$ 999.00</span>
+                    </div>
+                    <div class="row-flex board">
+                        <span class="Date">2020-09-29 95:57</span>
+                        <span class="Order">200398</span>
+                        <span class="Name">iPhone X 64Gb Grey</span>
+                        <span class="Price">$ 999.00</span>
+                        <span class="Quantity">1</span>
+                        <span class="Total">$ 999.00</span>
+                    </div>
+                    <div class="row-flex board">
+                        <span class="Date">2020-09-29 95:57</span>
+                        <span class="Order">200398</span>
+                        <span class="Name">iPhone X 64Gb Grey</span>
+                        <span class="Price">$ 999.00</span>
+                        <span class="Quantity">1</span>
+                        <span class="Total">$ 999.00</span>
                     </div>
                 </div>
                 <div class="firstSection row-flex insideContainer">
                     <div class="sectionBlock colum-flex">
-                        <div class="sectionimg1 relative1">
-                            <img id="firstimg" src="/images/first.png" alt="UI gaming">
-                            <img class="absolute1" src="/images/plus.svg" alt="plus">
-                            <img class="absolute2" src="/images/heart.svg" alt="heart">
-                        </div>
-                        <h3>
-                            UI Components for Unity Gaming
-                        </h3>      
-                    </div>
-                    <div class="sectionBlock colum-flex">
-                        <div class="sectionimg"><img src="/images/second.png" alt="analystics"></div>
-                        <h3>
-                            Analytics Mobile App – Blurr Series
-                        </h3>      
-                    </div>
-                    <div class="sectionBlock colum-flex">
-                        <div class="sectionimg"><img src="/images/third.png" alt="estaro"></div>
-                        <h3>
-                            Estaro – Dark-mode – Task Management App
-                        </h3>      
-                    </div>                        
-                    <div class="sectionBlock colum-flex">
-                        <div class="sectionimg"><img src="/images/forth.png" alt="streaming"></div>
-                        <h3>
-                            Live streaming application for gamers.
-                        </h3>      
-                    </div>
-                </div>
-                <div class="secondSection row-flex insideContainer">
-                    <div class="sectionBlock colum-flex">
-                        <div class="sectionimg"><img src="/images/firstinsec.png" alt="mockup"></div>
-                        <h3>
-                            Dark Mockup for Unity Gaming
-                        </h3>      
-                    </div>
-                    <div class="sectionBlock colum-flex">
-                        <div class="sectionimg"><img src="/images/secinsec.png" alt="smm"></div>
-                        <h3>
-                            SMM – Social Media Management – App UI
-                        </h3>      
-                    </div>
-                    <div class="sectionBlock colum-flex">
-                        <div class="sectionimg"><img src="/images/thirdinsec.png" alt="foodapp"></div>
-                        <h3>
-                            Food App 2.0 
-                        </h3>      
-                    </div>                        
-                    <div class="sectionBlock colum-flex">
-                        <div class="sectionimg"><img src="/images/forthinsec.png" alt="streaming"></div>
-                        <h3>
-                            Live streaming application for gamers.
-                        </h3>      
-                    </div>
-                </div>  
-                <div class="more">
-                    Load more
                 </div>      
             </section>
             <footer class="colum-flex">
@@ -333,4 +337,3 @@
     </div>  
 </body>
 </html>
-
